--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  * {@apply text-slate-950 }
+  .gray {@apply text-[#7E7E7E] border-[#7E7E7E]	 }
+  .violet {@apply bg-[#9195F0]	 }
+  .select_tab {@apply mt-2 font-medium rounded-sm -mb-0.5 py-0.5 cursor-pointer }
+  .img_g {@apply bg-[#D9D9D9] w-[27vw] h-[27vw] rounded }
+  
+  .btn_dot {@apply w-[30px] h-[30px] rounded-[50%] cursor-pointer }
+  .bg_blur1 {@apply bg-[rgba(19,31,63,0.51)] backdrop-blur-sm } 
+  .bg_blur2 {@apply bg-[rgba(255,255,255,0.24)] backdrop-blur-lg }
+  .center {@apply flex justify-center items-center }
+  
+  /* . {@apply  } */
+  /* . {@apply  } */
+  /* . {@apply  } */
+  /* . {@apply  } */
+  /* . {@apply  } */
+  /* . {@apply  } */
+  /* . {@apply  } */
+  /* . {@apply  } */
+  /* . {@apply  } */
+  /* . {@apply  } */
+  /* . {@apply  } */
+  /* . {@apply  } */
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+  .bannerAnimate{
+      opacity: 0;
+      animation: bannerAnimate 300ms linear 0s forwards;
+  }
 }
